[gd_scene load_steps=23 format=3 uid="uid://d2br6yx14n0mn"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_hc6o7"]
[ext_resource type="Texture2D" uid="uid://ccc3j236c8jin" path="res://assets/_0017_Layer-0.png" id="2_uejij"]
[ext_resource type="Texture2D" uid="uid://bwdp4ni5epkr0" path="res://assets/_0014_arka_daglar.png" id="3_ovaie"]
[ext_resource type="Texture2D" uid="uid://b176o3mdi2joo" path="res://assets/_0013_railroad.png" id="4_e5xng"]
[ext_resource type="PackedScene" uid="uid://wblx8v5541rq" path="res://scenes/kovboy.tscn" id="5_u1lv2"]
[ext_resource type="Script" path="res://scripts/bullet_counter.gd" id="6_wc3cm"]
[ext_resource type="Script" path="res://scripts/building_grid.gd" id="7_eope7"]
[ext_resource type="Script" path="res://scripts/building_block.gd" id="8_l2wer"]
[ext_resource type="Texture2D" uid="uid://d2irel15ci05a" path="res://assets/ikon_bg.png" id="8_r5o7l"]
[ext_resource type="Script" path="res://scripts/ikon_bank.gd" id="10_e3prf"]
[ext_resource type="Texture2D" uid="uid://b0x7ydfwx5o52" path="res://assets/kovboy_14temmuz_0001_4-copy.png" id="11_a6ite"]
[ext_resource type="Script" path="res://scripts/ikon_church.gd" id="12_d4ry7"]
[ext_resource type="Texture2D" uid="uid://bmeixu3mcgksg" path="res://assets/kovboy_14temmuz_0002_3-copy.png" id="13_crv5v"]
[ext_resource type="Script" path="res://scripts/ikon_saloon.gd" id="14_ftrw8"]
[ext_resource type="Texture2D" uid="uid://c6427chalkkew" path="res://assets/kovboy_14temmuz_0004_1-copy.png" id="15_in6gf"]
[ext_resource type="Script" path="res://scripts/ikon_sheriff.gd" id="16_qm6ki"]
[ext_resource type="Texture2D" uid="uid://c4r26v2dlsnwc" path="res://assets/kovboy_14temmuz_0000_5-copy.png" id="17_jmwlx"]
[ext_resource type="Script" path="res://scripts/ikon_townhall.gd" id="18_khpkp"]
[ext_resource type="Texture2D" uid="uid://0fsr5mdmbap7" path="res://assets/kovboy_14temmuz_0003_2-copy.png" id="19_h0kwv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8afdw"]
size = Vector2(274, 1203)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8dhnu"]
size = Vector2(288, 1305)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_psa0j"]
size = Vector2(2281.5, 313)

[node name="main" type="Node2D"]
script = ExtResource("1_hc6o7")

[node name="bg_sky" type="Sprite2D" parent="."]
z_index = -20
texture = ExtResource("2_uejij")
centered = false
metadata/_edit_lock_ = true

[node name="bg_backmountain" type="Sprite2D" parent="."]
z_index = -19
position = Vector2(958, 666)
texture = ExtResource("3_ovaie")
metadata/_edit_lock_ = true

[node name="bg_zone" type="Sprite2D" parent="."]
z_index = -18
position = Vector2(0, 31)
texture = ExtResource("4_e5xng")
centered = false
metadata/_edit_lock_ = true

[node name="kovboy" parent="." instance=ExtResource("5_u1lv2")]
z_index = 5
position = Vector2(809, 653)

[node name="border_collisions" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="border_collisions"]
position = Vector2(-137, 597)
shape = SubResource("RectangleShape2D_8afdw")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="border_collisions"]
position = Vector2(2065, 608.5)
shape = SubResource("RectangleShape2D_8dhnu")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="border_collisions"]
position = Vector2(865, 1236)
shape = SubResource("RectangleShape2D_psa0j")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="border_collisions"]
polygon = PackedVector2Array(-12, 506, 8, 511, 108, 504, 207, 485, 312, 453, 439, 421, 592, 403, 739, 401, 826, 401, 922, 406, 1013, 413, 1170, 442, 1286, 463, 1403, 452, 1564, 448, 1723, 481, 1831, 526, 1943, 535, 1979, -183, -143, -135)

[node name="UI" type="CanvasLayer" parent="."]

[node name="bullet_counter" type="Label" parent="UI"]
offset_left = 5.0
offset_top = 916.0
offset_right = 547.0
offset_bottom = 1066.0
theme_override_font_sizes/font_size = 20
script = ExtResource("6_wc3cm")

[node name="building_grid" type="Control" parent="UI"]
visible = false
modulate = Color(1, 1, 1, 0.74902)
clip_children = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_eope7")

[node name="Polygon2D" type="Polygon2D" parent="UI/building_grid"]
polygon = PackedVector2Array(-2, 510, 124, 502, 193, 489, 315, 451, 446, 418, 597, 402, 693, 402, 818, 400, 924, 405, 1021, 414, 1287, 463, 1406, 451, 1564, 450, 1718, 480, 1832, 528, 1942, 535, 1951, 1159, -45, 1110, -40, 525)

[node name="building_block" type="Node2D" parent="UI"]
position = Vector2(0, 174)
script = ExtResource("8_l2wer")

[node name="Sprite2D" type="Sprite2D" parent="UI/building_block"]
position = Vector2(1398, 1043)
texture = ExtResource("8_r5o7l")

[node name="bank" type="Control" parent="UI/building_block"]
layout_mode = 3
anchors_preset = 0
offset_left = 1569.0
offset_top = 997.0
offset_right = 1569.0
offset_bottom = 1168.0
script = ExtResource("10_e3prf")

[node name="ikon_bank" type="Sprite2D" parent="UI/building_block/bank"]
texture = ExtResource("11_a6ite")

[node name="Area2D" type="Area2D" parent="UI/building_block/bank"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="UI/building_block/bank/Area2D"]
polygon = PackedVector2Array(-1, -77, -77, 0, -1, 77, 75, 0)

[node name="church" type="Control" parent="UI/building_block"]
layout_mode = 3
anchors_preset = 0
offset_left = 1851.0
offset_top = 997.0
offset_right = 1851.0
offset_bottom = 1168.0
script = ExtResource("12_d4ry7")

[node name="ikon_church" type="Sprite2D" parent="UI/building_block/church"]
position = Vector2(-462, 0)
texture = ExtResource("13_crv5v")

[node name="Area2D" type="Area2D" parent="UI/building_block/church"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="UI/building_block/church/Area2D"]
polygon = PackedVector2Array(-464, -77, -539, 0, -463, 77, -387, 0)

[node name="saloon" type="Control" parent="UI/building_block"]
layout_mode = 3
anchors_preset = 0
offset_left = 1492.0
offset_top = 998.0
offset_right = 1492.0
offset_bottom = 1169.0
script = ExtResource("14_ftrw8")

[node name="ikon_saloon" type="Sprite2D" parent="UI/building_block/saloon"]
position = Vector2(-464, 0)
texture = ExtResource("15_in6gf")

[node name="Area2D" type="Area2D" parent="UI/building_block/saloon"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="UI/building_block/saloon/Area2D"]
polygon = PackedVector2Array(-540, 0, -464, -77, -388, 0, -464, 79)

[node name="sheriff" type="Control" parent="UI/building_block"]
layout_mode = 3
anchors_preset = 0
offset_left = 2217.0
offset_top = 997.0
offset_right = 2217.0
offset_bottom = 1168.0
script = ExtResource("16_qm6ki")

[node name="ikon_sheriff" type="Sprite2D" parent="UI/building_block/sheriff"]
position = Vector2(-466, 0)
texture = ExtResource("17_jmwlx")

[node name="Area2D" type="Area2D" parent="UI/building_block/sheriff"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="UI/building_block/sheriff/Area2D"]
polygon = PackedVector2Array(-467, -77, -543, 0, -467, 77, -391, 0)

[node name="townhall" type="Control" parent="UI/building_block"]
layout_mode = 3
anchors_preset = 0
offset_left = 1675.0
offset_top = 998.0
offset_right = 1675.0
offset_bottom = 1169.0
script = ExtResource("18_khpkp")

[node name="ikon_townhall" type="Sprite2D" parent="UI/building_block/townhall"]
position = Vector2(-468, 0)
texture = ExtResource("19_h0kwv")

[node name="Area2D" type="Area2D" parent="UI/building_block/townhall"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="UI/building_block/townhall/Area2D"]
polygon = PackedVector2Array(-545, 0, -469, -77, -392, 0, -468, 77)

[node name="building_layer" type="Node2D" parent="."]
z_index = 1

[node name="build_zone" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="build_zone"]
polygon = PackedVector2Array(1, 613, 46, 623, 103, 629, 167, 629, 228, 620, 296, 601, 365, 568, 421, 537, 488, 500, 541, 481, 586, 467, 660, 458, 731, 458, 787, 466, 857, 478, 954, 502, 1045, 531, 1121, 555, 1183, 564, 1313, 569, 1434, 568, 1520, 568, 1602, 573, 1691, 585, 1823, 609, 1925, 638, 1927, 686, 1881, 674, 1813, 660, 1717, 642, 1627, 630, 1537, 622, 1431, 622, 1318, 623, 1241, 621, 1174, 616, 1108, 606, 1046, 588, 968, 563, 908, 547, 845, 532, 782, 519, 732, 513, 679, 511, 620, 519, 565, 532, 509, 553, 418, 605, 340, 640, 263, 665, 210, 678, 141, 682, 93, 680, 43, 673, -16, 660, -18, 609)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="build_zone"]
polygon = PackedVector2Array(-42, 962, 11, 949, 67, 933, 121, 928, 192, 930, 237, 936, 287, 947, 363, 957, 417, 954, 509, 928, 574, 908, 658, 888, 736, 886, 799, 900, 864, 921, 931, 938, 1013, 953, 1074, 957, 1130, 954, 1210, 935, 1304, 911, 1353, 902, 1405, 897, 1511, 900, 1591, 910, 1670, 930, 1745, 948, 1810, 956, 1871, 956, 1946, 950, 1951, 1016, 1913, 1028, 1844, 1033, 1762, 1024, 1692, 1012, 1618, 993, 1545, 979, 1481, 974, 1415, 976, 1364, 979, 1136, 1033, 1034, 1034, 948, 1017, 867, 1002, 783, 974, 739, 961, 688, 960, 612, 975, 509, 1010, 445, 1027, 395, 1033, 327, 1030, 255, 1016, 192, 1005, 130, 1003, 68, 1008, -19, 1033)

[connection signal="input_event" from="UI/building_block/bank/Area2D" to="UI/building_block/bank" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="UI/building_block/bank/Area2D" to="UI/building_block/bank" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="UI/building_block/bank/Area2D" to="UI/building_block/bank" method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="UI/building_block/church/Area2D" to="UI/building_block/church" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="UI/building_block/church/Area2D" to="UI/building_block/church" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="UI/building_block/church/Area2D" to="UI/building_block/church" method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="UI/building_block/saloon/Area2D" to="UI/building_block/saloon" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="UI/building_block/saloon/Area2D" to="UI/building_block/saloon" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="UI/building_block/saloon/Area2D" to="UI/building_block/saloon" method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="UI/building_block/sheriff/Area2D" to="UI/building_block/sheriff" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="UI/building_block/sheriff/Area2D" to="UI/building_block/sheriff" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="UI/building_block/sheriff/Area2D" to="UI/building_block/sheriff" method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="UI/building_block/townhall/Area2D" to="UI/building_block/townhall" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="UI/building_block/townhall/Area2D" to="UI/building_block/townhall" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="UI/building_block/townhall/Area2D" to="UI/building_block/townhall" method="_on_area_2d_mouse_exited"]
